fix #14 (remove hover on mobile layout)

--- a/src/app.css
+++ b/src/app.css
@@ -308,6 +308,8 @@ a {
   transition-property: background-color;
 }
 
-.details__theme .button:hover {
-  background-color: var(--color-background-mute);
+@media (min-width: 768px) {
+  .details__theme .button:hover {
+    background-color: var(--color-background-mute);
+  }
 }
